--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,10 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
 # TODO Append connection to DB
-#---
-spring.config.activate.on-profile=ci,test
+
+pring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
+
