--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,7 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
 # TODO Append connection to DB
 
-pring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
