--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.sql.init.mode=always
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.springframework.transaction.interceptor=INFO
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=INFO
 
 #---
 # TODO Append connection to DB
