--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,38 @@
 version: '3.8'
 services:
   gateway:
-    build:
-    image:
-    container_name:
+    build: .gateway
+    image: amazoncorretto:11-alpine-jdk
+    container_name: gateway-container
     ports:
       - "8080:8080"
     depends_on:
+      - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
 
   server:
-    build:
-    image:
-    container_name:
+    build: .server
+    image: amazoncorretto:11-alpine-jdk
+    container_name: server-container
     ports:
       - "9090:9090"
     depends_on:
+      - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
+      - DB_NAME=shareit
+      - POSTGRES_USER=sa
+      - POSTGRES_PASSWORD=password
+      - DB_HOST=db
+      - DB_PORT=5432
 
   db:
-    image:
-    container_name:
+    image: postgres:13.7-alpine
+    container_name: db-container
     ports:
       - "6541:5432"
     environment:
+      - POSTGRES_DB=shareit
+      - POSTGRES_USER=sa
+      - POSTGRES_PASSWORD=password
