--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3.8'
 services:
   gateway:
-    build: .gateway
-    image: amazoncorretto:11-alpine-jdk
+    build: ./gateway
     container_name: gateway-container
     ports:
       - "8080:8080"
@@ -10,22 +9,20 @@ services:
       - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
+      - TZ=Europe/Moscow
 
   server:
-    build: .server
-    image: amazoncorretto:11-alpine-jdk
+    build: ./server
     container_name: server-container
     ports:
       - "9090:9090"
     depends_on:
       - db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      - DB_NAME=shareit
+      - SPRING_DATASOURSCE_URL=jdbc:postgresql://db:5432/shareit
       - POSTGRES_USER=sa
       - POSTGRES_PASSWORD=password
-      - DB_HOST=db
-      - DB_PORT=5432
+      - TZ=Europe/Moscow
 
   db:
     image: postgres:13.7-alpine
