--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-jdbc.username=${POSTGRES_USER}
-jdbc.password=${POSTGRES_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURSCE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
