--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
+      - TZ=Europe/Moscow
 
 
   server:
@@ -22,7 +23,7 @@ services:
       - SPRING_DATASOURSCE_URL=jdbc:postgresql://db:5432/shareit
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=sa
-
+      - TZ=Europe/Moscow
 
   db:
     image: postgres:13.7-alpine
@@ -33,3 +34,4 @@ services:
       - POSTGRES_DB=shareit
       - POSTGRES_USER=sa
       - POSTGRES_PASSWORD=password
+      - TZ=Europe/Moscow
